# wyag

./: .gitignore  CMakeLists.txt  README.md  test-wyag.sh
cxx/: example.cpp
python/: libwyag.py  test-wyag.sh
